--- a/style.css
+++ b/style.css
@@ -11,3 +11,20 @@ Updated: 2024-10-14 21:58:59
 
 */
 
+
+.space-mono-regular {
+    font-family: "Space Mono", monospace;
+    font-weight: 400;
+    font-style: normal;
+  }
+
+
+
+.footer a {
+    text-decoration: none !important; 
+}
+
+footer.wp-block-template-part {
+    border-top: 1px solid black;
+}
+
