--- a/style.css
+++ b/style.css
@@ -175,3 +175,172 @@ h1 {
     flex-direction: row-reverse;
     justify-content: space-between;
 }
+
+.photo-accueil {
+    width: calc(34.66% - -157px);
+    padding-top: 38.66%;
+    position: relative;
+    overflow: hidden;
+   
+}
+  
+  .image-accueil {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+  
+  .image-accueil img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;  /* L'image couvre toute la zone sans distorsion */
+    display: block;
+    width: 100%;
+    transition: transform 0.3s;
+  }
+
+  .image-accueil:hover img {
+    transform: scale(1.05); /* Zoom léger au survol */
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: rgba(0, 0, 0, 0.6);
+    opacity: 0;
+    transition: opacity 0.3s;
+    color: white;
+    text-align: center;
+}
+
+.photo-info {
+    margin-bottom: 20px;
+    display: flex;
+    gap: 310px;
+    flex-direction: row-reverse;
+    position: relative;
+    top: 280px;
+}
+.categorie,
+.titre {
+    font-size: 1em;
+    margin: 5px 0;
+}
+
+
+.image-accueil:hover .overlay {
+    opacity: 1;
+}
+
+.icon {
+    font-size: 2em;
+    color: white;
+    margin: 0 10px;
+    cursor: pointer;
+}
+
+
+  
+/* Lightbox */
+#lightbox {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.8);
+    align-items: center;
+    justify-content: center;
+    z-index: 9999;
+}
+
+#lightbox img {
+    max-width: 90%;
+    max-height: 90%;
+}
+
+#lightbox .close-lightbox {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    font-size: 2em;
+    color: white;
+    cursor: pointer;
+}
+
+  .photos-accueil {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+    justify-content: center;
+    position: relative;
+    overflow: hidden;
+}
+
+
+select#categorie {
+    width: 300px;
+    border-radius: 20px;
+    padding: 20px;
+    border: solid 2px #a9a9a9;
+}
+
+select#format {
+    width: 300px;
+    border-radius: 20px;
+    padding: 20px;
+    border: solid 2px #a9a9a9;
+}
+
+select#date {
+    width: 300px;
+    border-radius: 20px;
+    padding: 20px;
+    border: solid 2px #a9a9a9;
+}
+
+form {
+    display: flex;
+    gap: 370px;
+    margin-top: 170px;
+    margin-bottom: 50px;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+div#photo-filters {
+    display: flex;
+    gap: 30px;
+}
+
+#load-more {
+    margin: 30px;
+    height: 60px;
+    width: 300px;
+    border: solid 2px gray;
+    border-radius: 5px;
+    font-family: space mono;
+}
+
+img.oeil {
+    display: flex;
+    height: 30px;
+}
+
+img.fullscreen {
+    height: 40px;
+    display: flex;
+    position: relative;
+    bottom: 280px;
+    left: 280px;
+}
