--- a/style.css
+++ b/style.css
@@ -250,33 +250,57 @@ h1 {
 
 
   
-/* Lightbox */
-#lightbox {
-    display: none;
+.lightbox {
+    display: flex;
     position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background: rgba(0, 0, 0, 0.8);
-    align-items: center;
     justify-content: center;
-    z-index: 9999;
+    align-items: center;
+    z-index: 1000;
 }
 
-#lightbox img {
-    max-width: 90%;
-    max-height: 90%;
+.lightbox__container {
+    max-width: 45%;
+    max-height: 70%;
 }
 
-#lightbox .close-lightbox {
+.lightbox__container img {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+}
+
+.lightbox__close, .lightbox__next, .lightbox__prev {
     position: absolute;
+    background: #fff;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    font-size: 1em;
+    color: #333;
+}
+
+.lightbox__close {
     top: 20px;
     right: 20px;
-    font-size: 2em;
-    color: white;
-    cursor: pointer;
 }
+
+.lightbox__next {
+    top: 50%;
+    right: 20px;
+    transform: translateY(-50%);
+}
+
+.lightbox__prev {
+    top: 50%;
+    left: 20px;
+    transform: translateY(-50%);
+}
+
 
   .photos-accueil {
     display: flex;
@@ -309,7 +333,7 @@ select#date {
     border: solid 2px #a9a9a9;
 }
 
-form {
+form#photo-filters{
     display: flex;
     gap: 370px;
     margin-top: 170px;
@@ -318,7 +342,7 @@ form {
     justify-content: center;
 }
 
-div#photo-filters {
+.filtres {
     display: flex;
     gap: 30px;
 }
@@ -343,4 +367,21 @@ img.fullscreen {
     position: relative;
     bottom: 280px;
     left: 280px;
+}
+
+.contactpart {
+    border-top: solid 2px;
+    border-bottom: solid 2px;
+    margin-bottom: 190px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    display: flex;
+    justify-content: flex-start;
+    gap: 100px;
+    align-items: center;
+}
+
+button.contactbtn {
+    height: 70px;
+    width: 290px;
 }
