--- a/style.css
+++ b/style.css
@@ -4,10 +4,20 @@ Author: Afaf
 Description: Projet Openclassroom
 */
 
+
+/* GENERAL */
 .logo {
     width: 300px;
 }
 
+h1 {
+    font-size: 46px;
+}
+
+h2 {
+    font-family: space mono;
+    font-weight: 200;
+}
 .space-mono-regular {
     font-family: "Space Mono", serif;
     font-weight: 400;
@@ -31,22 +41,39 @@ Description: Projet Openclassroom
     font-weight: 700;
     font-style: italic;
   }
-  
 
+  .container {
+    max-width: 1400px;
+    margin: auto;
+    padding: 0 20px;
+}
+
+a {
+    color: black;
+    text-decoration: none;
+}
+
+.categorie,
+.titre {
+    font-size: 1em;
+    margin: 5px 0;
+}
+/*.........................................................*/
+
+/*BANNIERE*/
+.banniere {
+        width: -webkit-fill-available;
+}
+
+/*........................................................*/
+
+/* MENUS */
 .menu-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-top: 40px;
 }
-
-.container {
-    max-width: 1400px;
-    margin: auto;
-    padding: 0 20px;
-}
-
-
 
 ul#primary-menu {
     list-style-type: none;
@@ -55,19 +82,152 @@ ul#primary-menu {
     font-family: Space Mono;
 }
 
-
 nav.navbar {
     font-size: 20px;
 }
 
-a {
-    color: black;
-    text-decoration: none;
+ul#footer-menu {
+    list-style-type: none;
+    display: flex;
+    gap: 50px;
+    font-family: Space Mono;
 }
 
-.banniere {
-        width: -webkit-fill-available;
+nav.navbar.footer-navbar {
+    display: flex;
+    justify-content: center;
+    border-top: solid 1px;
+    align-items: center;
+    height: 40px;
 }
+@media screen and (min-width: 1000px) {
+    button#burger-btn {
+    display: none;
+}
+
+}
+@media screen and (max-width: 1000px) {
+    ul#footer-menu {
+        flex-wrap: wrap;
+        flex-direction: column;
+        align-items: center;
+    }
+    nav.navbar.footer-navbar {
+        display: block;
+        }
+
+#burger-btn {
+    margin-right: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    background: none;
+    border: none;
+    cursor: pointer;
+  }
+  
+  #burger-btn .line {
+    width: 30px;
+    height: 4px;
+    background-color: black;
+  }
+
+  nav.navbar #primary-menu {
+    display: none !important;
+  }
+
+  header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 63px;
+    margin-bottom: 40px;
+}
+.menu-header {
+    margin-top: 0px;
+}
+
+.menu-toggle {
+    width: 30px;
+    height: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    cursor: pointer;
+    background: none;
+    border: none;
+    padding: 0;
+    z-index: 1001;
+  }
+  
+  .menu-toggle .line {
+    width: 100%;
+    height: 4px;
+    background-color: black;
+    transition: all 0.3s ease-in-out;
+  }
+div#burger-menu .menuburger {
+    display: block;
+  }
+
+}
+
+.burger-menu {
+    position: fixed;
+    width: 100%;
+    top: 106px;
+    height: 100%;
+    background-color: #ff0000;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transform: translateY(-170%);
+    z-index: 1000;
+    max-width: 1440px;
+    margin-left: -20px;
+    opacity: 0;
+    transition: transform 0.5s ease, opacity 1s ease-in-out, visibility 0.5s ease-in-out;
+  }
+  
+  #burger-menu ul#primary-menu {
+    display: flex;
+    flex-direction: column;
+} 
+  .burger-menu ul li {
+    margin: 20px 0;
+  }
+  
+  .burger-menu ul li a {
+    text-decoration: none;
+    font-size: 55px;
+    transition: color 0.3s;
+    color: white !important;
+  }
+  
+  .menu-active {
+    transform: translateY(0);
+    opacity: 1;
+    visibility: visible;
+  }
+  
+  .burger-open .line:nth-child(1) {
+    transform: rotate(45deg) translate(5px, 5px);
+  }
+  
+  .burger-open .line:nth-child(2) {
+    opacity: 0;
+  }
+  
+  .burger-open .line:nth-child(3) {
+    transform: rotate(-45deg) translate(10px, -11px);
+  }
+  
+
+/*..............................................................*/
+
+
+/*FORMULAIRE*/
 
 .contact-img {
     height: 115px;
@@ -98,6 +258,19 @@ input.wpcf7-form-control.wpcf7-submit.has-spinner {
     margin: auto;
 }
 
+input.wpcf7-form-control.wpcf7-submit.has-spinner {
+    display: flex;
+    margin: auto;
+    font-family: 'Space Mono';
+    width: -webkit-fill-available;
+    height: 45px;
+    border-radius: 5px;
+}
+
+/*...................................................*/
+
+
+/*MODALE*/
 #myModal {
     display: none; /* Masque la modale */
     position: fixed;
@@ -122,33 +295,11 @@ input.wpcf7-form-control.wpcf7-submit.has-spinner {
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
-    z-index: 999; /* Sous la modale mais au-dessus du reste */
 }
 
-ul#footer-menu {
-    list-style-type: none;
-    display: flex;
-    gap: 50px;
-    font-family: Space Mono;
-}
+/*..................................................*/
 
-nav.navbar.footer-navbar {
-    display: flex;
-    justify-content: center;
-    border-top: solid 1px;
-    align-items: center;
-    height: 40px;
-}
-input.wpcf7-form-control.wpcf7-submit.has-spinner {
-    display: flex;
-    margin: auto;
-    font-family: 'Space Mono';
-    width: -webkit-fill-available;
-    height: 45px;
-    border-radius: 5px;
-}
-
-
+/* PHOTOS ET IMAGES */
 img.photo-image {
     height: 525px;
 }
@@ -165,15 +316,6 @@ img.photo-image {
 
 }
 
-h1 {
-    font-size: 46px;
-}
-
-h2 {
-    font-family: space mono;
-    font-weight: 200;
-}
-
 .you-may-like {
     gap: 40px;
     display: flex;
@@ -188,6 +330,7 @@ h2 {
     height: 631px;
     width: 1536px;
 }
+
 @media screen and (max-width: 1500px) {
     .you-may-like-content {
         display: flex;
@@ -227,23 +370,7 @@ h2 {
 
 }
 
-@media screen and (max-width: 1200px) {
 
-    .photo-navigation {
-        display: none;
-    }
-    
-    .contact-infos {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 44px !important;
-        flex-direction: column !important;
-        align-items: flex-start !important;
-        }
-        .contactpart {
-           justify-content: center !important;
-        }
-}
 
 .photo-accueil {
     width: calc(34.66% - -157px);
@@ -274,6 +401,49 @@ h2 {
     transform: scale(1.05); /* Zoom léger au survol */
 }
 
+.photo-info {
+    margin-bottom: 20px;
+    display: flex;
+    gap: 240px;
+    flex-direction: row-reverse;
+    position: sticky;
+    top: 280px;
+}
+
+.image-accueil:hover .overlay {
+    opacity: 1;
+}
+
+/* Style spécifique pour les images au format portrait */
+.portrait-image {
+    height: 900px; /* Fixe la hauteur à 900px */ /* Ajuste automatiquement la largeur */
+}
+
+.photos-accueil {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+    justify-content: center;
+    position: relative;
+    overflow: hidden;
+}
+
+@media screen and (max-width: 1280px) {
+   .photo-info {
+    display: flex;
+    gap: 47px;
+    flex-direction: row-reverse;
+    position: sticky;
+    top: 280px;
+    
+} 
+}
+
+
+/*........................................................................*/
+
+
+/*OVERLAY*/
 .overlay {
     position: absolute;
     top: 0;
@@ -292,25 +462,11 @@ h2 {
     flex-wrap: wrap;
 }
 
-.photo-info {
-    margin-bottom: 20px;
-    display: flex;
-    gap: 240px;
-    flex-direction: row-reverse;
-    position: sticky;
-    top: 280px;
-}
-.categorie,
-.titre {
-    font-size: 1em;
-    margin: 5px 0;
-}
+
+/*...........................................................*/
 
 
-.image-accueil:hover .overlay {
-    opacity: 1;
-}
-
+/*LIGHTBOX*/
 .icon {
     font-size: 2em;
     color: white;
@@ -322,9 +478,6 @@ h2 {
     flex-wrap: wrap;
 }
 
-
-
-  
 .lightbox {
     display: flex;
     position: fixed;
@@ -394,24 +547,30 @@ h2 {
     transform: translateY(-50%);
 }
 
-
-/* Style spécifique pour les images au format portrait */
-.portrait-image {
-    height: 900px; /* Fixe la hauteur à 900px */ /* Ajuste automatiquement la largeur */
-}
-
-
-
-
-.photos-accueil {
+span.fullscreen-icon {
     display: flex;
-    flex-wrap: wrap;
-    gap: 15px;
-    justify-content: center;
-    position: relative;
-    overflow: hidden;
+    position: absolute;
+    top: 15px;
+    right: 15px;
 }
 
+img.oeil {
+    display: flex;
+    height: 30px;
+}
+
+img.fullscreen {
+    height: 40px;
+    display: flex
+;
+    position: sticky;
+}
+
+/*........................................................................*/
+
+
+
+/*FILTRES*/
 
 select#categorie {
     width: 300px;
@@ -465,151 +624,12 @@ form#photo-filters{
         justify-content: center;
     }
   }
-@media screen and (max-width: 1000px) {
-    ul#footer-menu {
-        flex-wrap: wrap;
-        flex-direction: column;
-        align-items: center;
-    }
-    nav.navbar.footer-navbar {
-        display: block;
-        }
-
-#burger-btn {
-    margin-right: 20px;
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-    background: none;
-    border: none;
-    cursor: pointer;
-  }
-  
-  #burger-btn .line {
-    width: 30px;
-    height: 4px;
-    background-color: black;
-  }
-
-  nav.navbar #primary-menu {
-    display: none !important;
-  }
-
-  header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 63px;
-    margin-bottom: 40px;
-}
-.menu-header {
-    margin-top: 0px;
-}
-
-.menu-toggle {
-    width: 30px;
-    height: 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    cursor: pointer;
-    background: none;
-    border: none;
-    padding: 0;
-    z-index: 1001;
-  }
-  
-  .menu-toggle .line {
-    width: 100%;
-    height: 4px;
-    background-color: black;
-    transition: all 0.3s ease-in-out;
-  }
-div#burger-menu .menuburger {
-    display: block;
-  }
-
-}
 
 
-
-@media screen and (max-width: 1280px) {
-   .photo-info {
-    display: flex;
-    gap: 47px;
-    flex-direction: row-reverse;
-    position: sticky;
-    top: 280px;
-    
-} 
-}
-
-span.fullscreen-icon {
-    display: flex;
-    position: absolute;
-    top: 15px;
-    right: 15px;
-}
+/*.................................................................*/
 
 
-  
-  .burger-menu {
-    position: fixed;
-    width: 100%;
-    top: 106px;
-    height: 100%;
-    background-color: #ff0000;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    transform: translateY(-170%);
-    z-index: 1000;
-    max-width: 1440px;
-    margin-left: -20px;
-    overflow: hidden;
-    opacity: 0;
-    visibility: hidden;
-    transition: transform 0.5s ease, opacity 1s ease-in-out, visibility 0.5s ease-in-out;
-  }
-  
-  #burger-menu ul#primary-menu {
-    display: flex;
-    flex-direction: column;
-} 
-  .burger-menu ul li {
-    margin: 20px 0;
-  }
-  
-  .burger-menu ul li a {
-    text-decoration: none;
-    font-size: 55px;
-    transition: color 0.3s;
-    color: white !important;
-  }
-  
-  .menu-active {
-    transform: translateY(0);
-    opacity: 1;
-    visibility: visible;
-  }
-  
-  .burger-open .line:nth-child(1) {
-    transform: rotate(45deg) translate(5px, 5px);
-  }
-  
-  .burger-open .line:nth-child(2) {
-    opacity: 0;
-  }
-  
-  .burger-open .line:nth-child(3) {
-    transform: rotate(-45deg) translate(10px, -11px);
-  }
-  
-  body.menu-open {
-    overflow: hidden;
-  }
-
+/*CHARGER PLUS*/
 
 #load-more {
     margin: 40px;
@@ -629,17 +649,11 @@ span.fullscreen-icon {
     justify-content: center;
 }
 
-img.oeil {
-    display: flex;
-    height: 30px;
-}
 
-img.fullscreen {
-    height: 40px;
-    display: flex
-;
-    position: sticky;
-}
+/*..............................................................................*/
+
+
+/*CONTACT*/
 
 .contactpart {
     border-top: solid 2px;
@@ -671,7 +685,10 @@ button.contactbtn {
 }
 
 
+/*.....................................................................*/
 
+
+/*PHOTO NAVIGATION PAGE*/
 .miniature-next {
     width: 150px;
     height: auto;
@@ -694,3 +711,23 @@ button.contactbtn {
     display: inline-block;
 }
 
+@media screen and (max-width: 1200px) {
+
+    .photo-navigation {
+        display: none;
+    }
+    
+    .contact-infos {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 44px !important;
+        flex-direction: column !important;
+        align-items: flex-start !important;
+        }
+        .contactpart {
+           justify-content: center !important;
+        }
+}
+
+
+/*......................................................................................................*/
