--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ nav.navbar.footer-navbar {
     margin-bottom: 40px;
 }
 .menu-header {
-    margin-top: 0px;
+    margin: 0px;
 }
 
 .menu-toggle {
